# KalmanFilter

./: CMakeLists.txt  LICENSE  README.md
include/: ExtendedKalmanFilter.hpp  FilterBase.hpp  KalmanFilter.hpp  UnscentedKalmanFilter.hpp
source/: CMakeLists.txt  ExtendedKalmanFilter.cpp  KalmanFilter.cpp  UnscentedKalmanFilter.cpp
tests/: CMakeLists.txt  test_EKF.cpp  test_UKF.cpp  test_compare_KF.cpp  test_mannyray.cpp  test_martiro.cpp
